# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-07-13 Michael Truog   <mjtruog at protonmail dot com>

    * Change the C++ CloudI API fatal_exception name to fatal_error
    * Add a FatalError exception class to the
      Java, JavaScript, Perl, PHP, Python, Python/C, Ruby CloudI API
      to be a base class for exceptions that must
      cause the service process to restart
    * Now require PHP 7 for the PHP CloudI API for its exception hierarchy

2020-07-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve Python/C CloudI API exception handling
    * Add the fatal_exception class to the C++ CloudI API
      for usage as the base class of exceptions that must terminate
      the service process
      (assert functions will cause the service process to restart with
       C usage of assert.h calling abort to send a SIGABRT signal and
       C++ usage of CloudI::API::fatal_exception for any assert exceptions)

2020-07-10 Michael Truog   <mjtruog at protonmail dot com>

    * Improve CloudI API service request exception handling
      to ensure unrecoverable exceptions and assertions cause
      the service process to restart
        * JavaScript, Perl, Python, Python/C, Ruby will restart when
          an assertion fails with an AssertionError exception
          (Java (in the previous commit) and PHP already did this)
        * Python, Python/C, Ruby will restart when a service request handler
          uses the exit function
          (though Python/C forces the exit code to be 1)
        * Python and Python/C provide null responses for Exceptions and
          restarts for other BaseExceptions
        * Ruby provides null responses for StandardError exceptions and
          restarts for other Exceptions
    * Fix the Perl CloudI API subscribe function so an execution thread
      will properly cycle through the subscriptions using the same pattern